--- a/SearchAlgorithmsLib/WebApp/Html/Register.html
+++ b/SearchAlgorithmsLib/WebApp/Html/Register.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <script src="../Scripts/jquery-3.1.1.js"></script>
+    <script src="../Scripts/bootstrap.js"></script>
+    <link href="../Content/bootstrap.min.css"/>
     <script>
         $(function(){
             $("#navbar").load("NavBar.html");
@@ -12,7 +14,30 @@
 </head>
 <body>
 <div id="navbar"></div>
-    
-
+<div class="page-header">
+    <h1>Registration:</h1>
+    <p>Please insert your information down low</p>
+</div>
+    <div class="container">
+        <form>
+            <div class="form-group">
+                <label for="userName">User Name:</label>
+                <input type="text" class="form-control" id="userName" />
+            </div>
+            <div class="form-group">
+                <label for="pwd">Password:</label>
+                <input type="password" class="form-control" id="pwd">
+            </div>
+            <div class="form-group">
+                <label for="confPwd">Confirm Password:</label>
+                <input type="password" class="form-control" id="confPwd">
+            </div>
+            <div class="form-group">
+                <label for="email">Email address:</label>
+                <input type="email" class="form-control" id="email">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
