--- a/SearchAlgorithmsLib/WebApp/Html/Register.html
+++ b/SearchAlgorithmsLib/WebApp/Html/Register.html
@@ -3,7 +3,7 @@
 <head>
     <script src="../Scripts/jquery-3.1.1.js"></script>
     <script src="../Scripts/bootstrap.js"></script>
-    <link href="../Content/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../Content/bootstrap.min.css"/>
     <script>
         $(function(){
             $("#navbar").load("NavBar.html");
@@ -12,12 +12,15 @@
     <meta charset="utf-8"/>
     <title>Register Page</title>
 </head>
-<body>
+<body style="padding-top: 1%">
 <div id="navbar"></div>
-<div class="page-header">
-    <h1>Registration:</h1>
-    <p>Please insert your information down low</p>
-</div>
+
+    <div class="container">
+        <div class="page-header">
+            <h1>Registration:</h1>
+            <p>Please insert your information down low</p>
+        </div>
+    </div>
     <div class="container">
         <form>
             <div class="form-group">
