--- a/SearchAlgorithmsLib/WebApp/Html/NavBar.html
+++ b/SearchAlgorithmsLib/WebApp/Html/NavBar.html
@@ -5,7 +5,6 @@
 </head>
 	
 <body>
-		
 <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -23,14 +22,15 @@
                 <li><a href="#about">Multi Player</a></li>
                 <li><a href="#contact">Settings</a></li>
                 <li><a href="#contact">User Rankings</a></li>
-                <li><a href="#we">Register</a></li>
-                <li><a href="#contact">Login</a></li>
             </ul>
-        </div><!--/.nav-collapse -->
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#nwe">Register</a></li>
+                <li><a class="active" href="#ncontact">Login</a></li>
+            </ul>
+        </div>
     </div>
 </nav>
-	
-		
+
 </body>
 
 </html>
