--- a/SearchAlgorithmsLib/WebApp/Html/NavBar.html
+++ b/SearchAlgorithmsLib/WebApp/Html/NavBar.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="../Scripts/jquery-3.1.1.min.js"></script>
+    <link href="../Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 	
 <body>
