--- a/SearchAlgorithmsLib/WebApp/Html/Register.html
+++ b/SearchAlgorithmsLib/WebApp/Html/Register.html
@@ -39,7 +39,7 @@
                 <label for="email">Email address:</label>
                 <input type="email" class="form-control" id="email">
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default btn-success">Submit</button>
         </form>
     </div>
 </body>
