--- a/SearchAlgorithmsLib/WebApp/Html/NavBar.html
+++ b/SearchAlgorithmsLib/WebApp/Html/NavBar.html
@@ -1,11 +1,13 @@
 ﻿<html>
 <head>
     <script src="../Scripts/jquery-3.1.1.min.js"></script>
+    <script src="../Scripts/bootstrap.min.js"></script>
     <link href="../Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 	
 <body>
-<nav id="navbar" class="navbar navbar-inverse navbar-fixed-top">
+<!-- Fixed navbar -->
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -14,20 +16,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Maze</a>
+            <a class="navbar-brand" href="#">Project name</a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
+        <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#sp">Single player</a></li>
+                <li><a href="#">Single player</a></li>
                 <li><a href="#about">Multi Player</a></li>
                 <li><a href="#contact">Settings</a></li>
                 <li><a href="#contact">User Rankings</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#nwe">Register</a></li>
-                <li><a class="active" href="#ncontact">Login</a></li>
+                <li class="active"><a href="#ncontact">Login</a></li>
             </ul>
-        </div>
+        </div><!--/.nav-collapse -->
     </div>
 </nav>
 
