--- a/SearchAlgorithmsLib/WebApp/Html/NavBar.html
+++ b/SearchAlgorithmsLib/WebApp/Html/NavBar.html
@@ -3,6 +3,7 @@
     <script src="../Scripts/jquery-3.1.1.min.js"></script>
     <script src="../Scripts/bootstrap.min.js"></script>
     <link href="../Content/bootstrap.min.css" rel="stylesheet" />
+    <base target="_parent"/>
 </head>
 	
 <body>
@@ -16,18 +17,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="../index.html">Project name</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="#">Single player</a></li>
                 <li><a href="#about">Multi Player</a></li>
-                <li><a href="#contact">Settings</a></li>
+                <li><a href="Settings.html">Settings</a></li>
                 <li><a href="#contact">User Rankings</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#nwe">Register</a></li>
-                <li class="active"><a href="#ncontact">Login</a></li>
+                <li><a href="Register.html">Register</a></li>
+                <li class="active"><a href="Login.html">Login</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
