--- a/SearchAlgorithmsLib/WebApp/Html/Settings.html
+++ b/SearchAlgorithmsLib/WebApp/Html/Settings.html
@@ -2,16 +2,13 @@
 <html>
 <head>
     <script src="../Scripts/jquery-3.1.1.js"></script>
-    <script> 
-        $(function(){
-            $("#navbar").load("NavBar.html"); 
-        });
-    </script>
+    <link href="../Css/NavBar.css" rel="stylesheet" />
     <meta charset="utf-8"/>
     <title>Settings</title>
 </head>
 <body>    
-    <div id="navbar"></div>
+    <iframe id="INavBar" src="NavBar.html"></iframe>
+
 
 
 
