--- a/SearchAlgorithmsLib/WebApp/index.html
+++ b/SearchAlgorithmsLib/WebApp/index.html
@@ -2,15 +2,12 @@
 	<head>
 	    <script src="Scripts/jquery-3.1.1.min.js"></script>
 	    <link rel="stylesheet" href="Content/bootstrap.min.css">
-	    <script> 
-    	    $(function(){
-    	        $("#navbar").load("Html/NavBar.html"); 
-    	    });
-    	</script>
+        <link href="Css/NavBar.css" rel="stylesheet" />
 	</head>
 	
 	<body>
-        <div id="navbar"></div>
+	<iframe id="INavBar" src="Html/NavBar.html"></iframe>
+
         <div class="container">
             <div class="jumbotron">
                 <h1>Play The Best Maze!</h1>
