--- a/SearchAlgorithmsLib/WebApp/Html/Register.html
+++ b/SearchAlgorithmsLib/WebApp/Html/Register.html
@@ -4,16 +4,13 @@
     <script src="../Scripts/jquery-3.1.1.js"></script>
     <script src="../Scripts/bootstrap.js"></script>
     <link rel="stylesheet" href="../Content/bootstrap.min.css"/>
-    <script>
-        $(function(){
-            $("#navbar").load("NavBar.html");
-        });
-    </script>
+    <link href="../Css/NavBar.css" rel="stylesheet" />
+
     <meta charset="utf-8"/>
     <title>Register Page</title>
 </head>
-<body style="padding-top: 1%">
-<div id="navbar"></div>
+<body>
+    <iframe id="INavBar" src="NavBar.html"></iframe>
 
     <div class="container">
         <div class="page-header">
