--- a/SearchAlgorithmsLib/WebApp/index.html
+++ b/SearchAlgorithmsLib/WebApp/index.html
@@ -1,12 +1,14 @@
 <html>
-	<head>
-	    <script src="Scripts/jquery-3.1.1.min.js"></script>
-	    <link rel="stylesheet" href="Content/bootstrap.min.css">
-        <link href="Css/NavBar.css" rel="stylesheet" />
-	</head>
-	
-	<body>
-	<iframe id="INavBar" src="Html/NavBar.html"></iframe>
+<head>
+    <title>Main Page</title>
+
+    <script src="Scripts/jquery-3.1.1.min.js"></script>
+    <link rel="stylesheet" href="Content/bootstrap.min.css">
+    <link href="Css/NavBar.css" rel="stylesheet" />
+</head>
+
+<body>
+	    <iframe id="INavBar" src="Html/NavBar.html"></iframe>
 
         <div class="container">
             <div class="jumbotron">
