--- a/SearchAlgorithmsLib/WebApp/Html/Login.html
+++ b/SearchAlgorithmsLib/WebApp/Html/Login.html
@@ -4,12 +4,13 @@
     <script src="../Scripts/jquery-3.1.1.js"></script>
     <script src="../Scripts/bootstrap.js"></script>
     <link rel="stylesheet" href="../Content/bootstrap.min.css" />
-    <link href="../Css/NavBar.css" rel="stylesheet" />
     <meta charset="utf-8"/>
     <title>Login</title>
+    
 </head>
 <body>
-<iframe id="INavBar" src="NavBar.html"></iframe>
+<div id="navbar"></div>
+<div id="spacer"></div>
 <div class="container">
     <form class="form-signin">
         <h2 class="form-signin-heading">Please Login</h2>
@@ -22,5 +23,8 @@
     </form>
 
 </div>
+    
+<script src="../Scripts/NavBar.js"></script>
+
 </body>
 </html>
