--- a/SearchAlgorithmsLib/WebApp/Html/NavBar.html
+++ b/SearchAlgorithmsLib/WebApp/Html/NavBar.html
@@ -3,7 +3,6 @@
     <script src="../Scripts/jquery-3.1.1.min.js"></script>
     <script src="../Scripts/bootstrap.min.js"></script>
     <link href="../Content/bootstrap.min.css" rel="stylesheet" />
-    <base target="_parent"/>
 </head>
 	
 <body>
@@ -23,12 +22,12 @@
             <ul class="nav navbar-nav">
                 <li><a href="#">Single player</a></li>
                 <li><a href="#about">Multi Player</a></li>
-                <li><a href="Settings.html">Settings</a></li>
+                <li><a href="../Html/Settings.html">Settings</a></li>
                 <li><a href="#contact">User Rankings</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="Register.html">Register</a></li>
-                <li class="active"><a href="Login.html">Login</a></li>
+                <li><a href="../Html/Register.html">Register</a></li>
+                <li class="active"><a href="../Html/Login.html">Login</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
