--- a/SearchAlgorithmsLib/WebApp/Html/Register.html
+++ b/SearchAlgorithmsLib/WebApp/Html/Register.html
@@ -4,13 +4,14 @@
     <script src="../Scripts/jquery-3.1.1.js"></script>
     <script src="../Scripts/bootstrap.js"></script>
     <link rel="stylesheet" href="../Content/bootstrap.min.css"/>
-    <link href="../Css/NavBar.css" rel="stylesheet" />
 
     <meta charset="utf-8"/>
     <title>Register Page</title>
 </head>
 <body>
-    <iframe id="INavBar" src="NavBar.html"></iframe>
+<div id="navbar"></div>
+<div id="spacer"></div>
+
 
     <div class="container">
         <div class="page-header">
@@ -39,5 +40,6 @@
             <button type="submit" class="btn btn-default btn-success">Submit</button>
         </form>
     </div>
+    <script src="../Scripts/NavBar.js"></script>
 </body>
 </html>
