--- a/SearchAlgorithmsLib/WebApp/index.html
+++ b/SearchAlgorithmsLib/WebApp/index.html
@@ -4,19 +4,21 @@
 
     <script src="Scripts/jquery-3.1.1.min.js"></script>
     <link rel="stylesheet" href="Content/bootstrap.min.css">
-    <link href="Css/NavBar.css" rel="stylesheet" />
+    <script src="Scripts/bootstrap.js"></script>
 </head>
 
 <body>
-	    <iframe id="INavBar" src="Html/NavBar.html"></iframe>
+<div id="navbar"></div>
+<div id="spacer"></div>
 
-        <div class="container">
-            <div class="jumbotron">
-                <h1>Play The Best Maze!</h1>
-                <p>play online against your friends</p>
-                <button type="button" class="btn btn-primary">Lets Play</button>
-            </div>
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Play The Best Maze!</h1>
+            <p>play online against your friends</p>
+            <button type="button" class="btn btn-primary">Lets Play</button>
         </div>
-	</body>
+    </div>
+    <script src="Scripts/NavBar.js"></script>
+</body>
 
 </html>
