--- a/SearchAlgorithmsLib/WebApp/Html/Settings.html
+++ b/SearchAlgorithmsLib/WebApp/Html/Settings.html
@@ -2,15 +2,16 @@
 <html>
 <head>
     <script src="../Scripts/jquery-3.1.1.js"></script>
-    <link href="../Css/NavBar.css" rel="stylesheet" />
     <meta charset="utf-8"/>
     <title>Settings</title>
 </head>
 <body>    
-    <iframe id="INavBar" src="NavBar.html"></iframe>
+<div id="navbar"></div>
+<div id="spacer"></div>
 
 
 
 
+    <script src="../Scripts/NavBar.js"></script>
 </body>
 </html>
