--- a/SearchAlgorithmsLib/WebApp/Html/NavBar.html
+++ b/SearchAlgorithmsLib/WebApp/Html/NavBar.html
@@ -16,11 +16,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../index.html">Project name</a>
+            <a class="navbar-brand" href="../index.html">Best Maze</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Single player</a></li>
+                <li><a href="../Html/SinglePlayer.html">Single player</a></li>
                 <li><a href="#about">Multi Player</a></li>
                 <li><a href="../Html/Settings.html">Settings</a></li>
                 <li><a href="#contact">User Rankings</a></li>
