--- a/SearchAlgorithmsLib/WebApp/Html/SinglePlayer.html
+++ b/SearchAlgorithmsLib/WebApp/Html/SinglePlayer.html
@@ -18,14 +18,14 @@
                 </div>
                 <div class="form-group form-inline">
                     <label class="col-sm-3" for="mazeRows">Rows:</label>
-                    <input type="password" class="form-control" id="mazeRows">
+                    <input type="text" class="form-control" id="mazeRows">
                 </div>
                 <div class="form-group form-inline">
                     <label class="col-sm-3" for="mazeCols">Cols:</label>
-                    <input type="password" class="form-control" id="mazeCols">
+                    <input type="text" class="form-control" id="mazeCols">
                 </div>
                 <div class="form-group form-inline">
-                    <button class="col-sm-offset-3 btn btn-default">Start New Game</button>
+                    <button onclick="StartGame()" class="col-sm-offset-3 btn btn-default">Start New Game</button>
                 </div>
                 <div class="form-group form-inline">
                     <label class="col-sm-3" for="mazeAlg">Search Algo:</label>
@@ -39,10 +39,32 @@
                 </div>
             </form>
         </div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-8">
+            <canvas style="border: 2px black solid;"></canvas>
+        </div>
     </div>
     <script src="../Scripts/jquery-3.1.1.js"></script>
     <script src="../Scripts/bootstrap.js"></script>
     <script src="../Scripts/NavBar.js"></script>
+    <script src="../Scripts/MazeBoard.js"></script>
+<script>
+    var maze;
+    function StartGame() {
+        console.log("in StartGame()");
+        var url = "/api/SinglePlayer?" +
+            "name=" + $("#mazeName").val() +
+            "&" +
+            "rows=" + $("#mazeRows").val() +
+            "&" +
+            "cols=" + $("#mazeCols").val();
+        console.log(url);
+        $.getJSON(url).done(function (data) {
+            console.log(data);
+            maze = $.fn.mazeBoard(data, data.Maze, data.Start.Row, data.Start.Col, data.End.Row, data.End.Col);
+            console.log(maze);
+
+        });
+    }
+</script>
 </body>
 </html>
