--- a/SearchAlgorithmsLib/WebApp/Html/NavBar.html
+++ b/SearchAlgorithmsLib/WebApp/Html/NavBar.html
@@ -20,7 +20,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Single player</a></li>
+                <li><a href="../Html/SinglePlayer.html">Single player</a></li>
                 <li><a href="#about">Multi Player</a></li>
                 <li><a href="../Html/Settings.html">Settings</a></li>
                 <li><a href="#contact">User Rankings</a></li>
