--- a/SearchAlgorithmsLib/WebApp/Html/SinglePlayer.html
+++ b/SearchAlgorithmsLib/WebApp/Html/SinglePlayer.html
@@ -25,7 +25,7 @@
                     <input type="text" class="form-control" id="mazeCols">
                 </div>
                 <div class="form-group form-inline">
-                    <button onclick="StartGame()" class="col-sm-offset-3 btn btn-default">Start New Game</button>
+                    <button onclick="StartGame(); return false;" class="col-sm-offset-3 btn btn-default">Start New Game</button>
                 </div>
                 <div class="form-group form-inline">
                     <label class="col-sm-3" for="mazeAlg">Search Algo:</label>
@@ -40,31 +40,15 @@
             </form>
         </div>
         <div class="col-sm-8">
-            <canvas style="border: 2px black solid;"></canvas>
+            <canvas id="boardCanvas" height="450" width="450" style="border: 2px black solid;"></canvas>
         </div>
     </div>
     <script src="../Scripts/jquery-3.1.1.js"></script>
     <script src="../Scripts/bootstrap.js"></script>
     <script src="../Scripts/NavBar.js"></script>
     <script src="../Scripts/MazeBoard.js"></script>
-<script>
-    var maze;
-    function StartGame() {
-        console.log("in StartGame()");
-        var url = "/api/SinglePlayer?" +
-            "name=" + $("#mazeName").val() +
-            "&" +
-            "rows=" + $("#mazeRows").val() +
-            "&" +
-            "cols=" + $("#mazeCols").val();
-        console.log(url);
-        $.getJSON(url).done(function (data) {
-            console.log(data);
-            maze = $.fn.mazeBoard(data, data.Maze, data.Start.Row, data.Start.Col, data.End.Row, data.End.Col);
-            console.log(maze);
-
-        });
-    }
-</script>
+    <img id="startImg" src="..\Images\poo.jpeg" hidden />
+    <img id="endImg" src="..\Images\toilet.jpeg" hidden />
+    <script src="../Scripts/SinglePlayer.js"></script>
 </body>
 </html>
