--- a/SearchAlgorithmsLib/WebApp/Html/SinglePlayer.html
+++ b/SearchAlgorithmsLib/WebApp/Html/SinglePlayer.html
@@ -35,7 +35,7 @@
                     </select>
                 </div>
                 <div class="form-group form-inline">
-                    <button class="col-sm-offset-3 btn btn-default">Solve Game</button>
+                    <button onclick="SolveMaze(); return false;" class="col-sm-offset-3 btn btn-default">Solve Game</button>
                 </div>
             </form>
         </div>
