--- a/SearchAlgorithmsLib/WebApp/Html/Register.html
+++ b/SearchAlgorithmsLib/WebApp/Html/Register.html
@@ -35,11 +35,12 @@
             <label for="email">Email address:</label>
             <input type="email" class="form-control" id="email">
         </div>
-        <button type="submit" class="btn btn-default btn-success">Submit</button>
+        <button onclick="checkAndSubmit(); return false;" type="submit" class="btn btn-default btn-success">Submit</button>
     </form>
 </div>
     <script src="../Scripts/jquery-3.1.1.js"></script>
     <script src="../Scripts/bootstrap.js"></script>
     <script src="../Scripts/NavBar.js"></script>
+    <script src="../Scripts/Registration.js"></script>
 </body>
 </html>
