--- a/SearchAlgorithmsLib/WebApp/Html/NavBar.html
+++ b/SearchAlgorithmsLib/WebApp/Html/NavBar.html
@@ -26,8 +26,8 @@
                 <li><a href="#contact">User Rankings</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="../Html/Register.html">Register</a></li>
-                <li class="active"><a href="../Html/Login.html">Login</a></li>
+                <li><a id="register" href="../Html/Register.html">Register</a></li>
+                <li class="active"><a id="login" onclick="Logout();" href="../Html/Login.html">Login</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
