--- a/SearchAlgorithmsLib/WebApp/Html/Login.html
+++ b/SearchAlgorithmsLib/WebApp/Html/Login.html
@@ -1,8 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <script src="../Scripts/jquery-3.1.1.js"></script>
-    <script src="../Scripts/bootstrap.js"></script>
+    
     <link rel="stylesheet" href="../Content/bootstrap.min.css" />
     <meta charset="utf-8"/>
     <title>Login</title>
@@ -14,17 +13,20 @@
 <div class="container">
     <form class="form-signin">
         <h2 class="form-signin-heading">Please Login</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <label for="userName" class="sr-only">User Name</label>
+        <input type="text" id="userName" class="form-control" placeholder="User Name" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button id="submitLogin" onclick="LoginUser(); return false;" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
 
 </div>
-    
+
+<script src="../Scripts/jquery-3.1.1.js"></script>
+<script src="../Scripts/bootstrap.js"></script>
 <script src="../Scripts/NavBar.js"></script>
+<script src="../Scripts/Login.js"></script>
 
 </body>
 </html>
