--- a/SearchAlgorithmsLib/WebApp/Html/Settings.html
+++ b/SearchAlgorithmsLib/WebApp/Html/Settings.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <script src="../Scripts/jquery-3.1.1.js"></script>
+    <link rel="stylesheet" href="../Content/bootstrap.min.css" />
+
     <meta charset="utf-8"/>
     <title>Settings</title>
 </head>
@@ -9,9 +10,35 @@
 <div id="navbar"></div>
 <div id="spacer"></div>
 
+<br/>
+<div class="container">
+    <div class="col-sm-4">
+        <form>
+            <div class="form-group form-inline">
+                <label class="col-sm-3" for="mazeRows">Rows:</label>
+                <input type="text" class="form-control" id="mazeRows">
+            </div>
+            <div class="form-group form-inline">
+                <label class="col-sm-3" for="mazeCols">Cols:</label>
+                <input type="text" class="form-control" id="mazeCols">
+            </div>
+            <div class="form-group form-inline">
+                <label class="col-sm-3" for="mazeAlg">Search Algo:</label>
+                <select class="form-control" id="mazeAlg">
+                    <option>BFS</option>
+                    <option>DFS</option>
+                </select>
+            </div>
+            <div class="form-group form-inline">
+                <button onclick="SolveMaze(); return false;" class="col-sm-offset-3 btn btn-default">Save settings</button>
+            </div>
+        </form>
+    </div>
+</div>
 
 
 
-    <script src="../Scripts/NavBar.js"></script>
+<script src="../Scripts/jquery-3.1.1.js"></script>
+<script src="../Scripts/NavBar.js"></script>
 </body>
 </html>
