--- a/SearchAlgorithmsLib/WebApp/Html/MultiPlayer.html
+++ b/SearchAlgorithmsLib/WebApp/Html/MultiPlayer.html
@@ -36,7 +36,7 @@
                 <input type="text" class="form-control" id="mazeCols">
             </div>
             <div class="form-group form-inline">
-                <button onclick="StartGame();return false;" class="col-sm-offset-3 btn btn-default">Start New Game</button>
+                <button id="startGame" class="col-sm-offset-3 btn btn-default">Start New Game</button>
             </div>
 
         </form>
