--- a/SearchAlgorithmsLib/WebApp/Html/NavBar.html
+++ b/SearchAlgorithmsLib/WebApp/Html/NavBar.html
@@ -21,7 +21,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="../Html/SinglePlayer.html">Single player</a></li>
-                <li><a href="../Html/MultiPlayer.html">Multi Player</a></li>
+                <li><a id="multiPlayerNav" onclick="ApplyMulti();" href="../Html/MultiPlayer.html">Multi Player</a></li>
                 <li><a href="../Html/Settings.html">Settings</a></li>
                 <li><a href="#contact">User Rankings</a></li>
             </ul>
