--- a/SearchAlgorithmsLib/WebApp/Html/MultiPlayer.html
+++ b/SearchAlgorithmsLib/WebApp/Html/MultiPlayer.html
@@ -14,9 +14,7 @@
         <form>
             <div class="form-group form-inline">
                 <label class="col-sm-3" for="mazeAlg">Games List:</label>
-                <select class="form-control" id="gameList">
-                    <option>BFS</option>
-                    <option>DFS</option>
+                <select onclick="" class="form-control" id="gameList">
                 </select>
             </div>
             <div class="form-group form-inline">
