--- a/SearchAlgorithmsLib/WebApp/Html/MultiPlayer.html
+++ b/SearchAlgorithmsLib/WebApp/Html/MultiPlayer.html
@@ -14,7 +14,7 @@
         <form>
             <div class="form-group form-inline">
                 <label class="col-sm-3" for="mazeAlg">Games List:</label>
-                <select class="form-control" id="gameList">
+                <select onclick="GetList()" class="form-control" id="gameList">
                     <option>BFS</option>
                     <option>DFS</option>
                 </select>
