--- a/SearchAlgorithmsLib/WebApp/Html/MultiPlayer.html
+++ b/SearchAlgorithmsLib/WebApp/Html/MultiPlayer.html
@@ -48,7 +48,7 @@
 <script src="../Scripts/jquery-3.1.1.js"></script>
 <script src="../Scripts/bootstrap.js"></script>
 <script src="../Scripts/jquery.signalR-2.2.2.js"></script>
-<script src="signalr/hubs"></script>
+<script src="/signalr/hubs"></script>
 <script src="../Scripts/NavBar.js"></script>
 <script src="../Scripts/MazeBoard.js"></script>
 <script src="../Scripts/MultiPlayer.js"></script>
