--- a/SearchAlgorithmsLib/WebApp/Html/NavBar.html
+++ b/SearchAlgorithmsLib/WebApp/Html/NavBar.html
@@ -16,14 +16,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../index.html">Project name</a>
+            <a class="navbar-brand" href="../index.html">The Best Maze</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="../Html/SinglePlayer.html">Single player</a></li>
                 <li><a id="multiPlayerNav" onclick="ApplyMulti();" href="../Html/MultiPlayer.html">Multi Player</a></li>
                 <li><a href="../Html/Settings.html">Settings</a></li>
-                <li><a href="#contact">User Rankings</a></li>
+                <li><a href="../Html/Ranks.html">User Rankings</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a id="register" href="../Html/Register.html">Register</a></li>
