--- a/SearchAlgorithmsLib/WebApp/Html/Settings.html
+++ b/SearchAlgorithmsLib/WebApp/Html/Settings.html
@@ -30,7 +30,7 @@
                 </select>
             </div>
             <div class="form-group form-inline">
-                <button onclick="SolveMaze(); return false;" class="col-sm-offset-3 btn btn-default">Save settings</button>
+                <button onclick="SaveSettings(); return false;" class="col-sm-offset-3 btn btn-default">Save settings</button>
             </div>
         </form>
     </div>
@@ -40,5 +40,6 @@
 
 <script src="../Scripts/jquery-3.1.1.js"></script>
 <script src="../Scripts/NavBar.js"></script>
+<script src="../Scripts/Settings.js"></script>
 </body>
 </html>
