--- a/SearchAlgorithmsLib/WebApp/Html/MultiPlayer.html
+++ b/SearchAlgorithmsLib/WebApp/Html/MultiPlayer.html
@@ -14,13 +14,11 @@
         <form>
             <div class="form-group form-inline">
                 <label class="col-sm-3" for="mazeAlg">Games List:</label>
-                <select onclick="GetList()" class="form-control" id="gameList">
-                    <option>BFS</option>
-                    <option>DFS</option>
+                <select class="form-control" id="gameList">
                 </select>
             </div>
             <div class="form-group form-inline">
-                <button onclick="" class="col-sm-offset-3 btn btn-default">Join Game</button>
+                <button id="joinButton" class="col-sm-offset-3 btn btn-default">Join Game</button>
             </div>
 
             <div class="form-group form-inline">
